--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
-name: "Hello World"
-description: "Greet someone and record the time"
+name: "auto review action"
+description: "auto post comments based on changes"
 inputs:
   token:
     description: "token for github"
@@ -7,4 +7,4 @@ inputs:
     description: "path to data yaml file"
 runs:
   using: "node20"
-  main: "dist/index.min.js"
+  main: "dist/index.js"
