fix the script path

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,15 +4,15 @@ on:
       - main
 
 jobs:
-  comment:
-    name: job to post comment(s)
+  review:
+    name: post comment(s)
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Check component dependencies
+      - name: analyse changes
         uses: ./
-        id: components-check
+        id: auto-review-action
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           datapath: docs/data.yml
