--- a/docs/data.yml
+++ b/docs/data.yml
@@ -8,4 +8,4 @@
 
     - [ ] the code is tested
     - [ ] files are compressed
-    - [ ] files contain no errorss
+    - [ ] files contain no errors
