--- a/docs/data.yml
+++ b/docs/data.yml
@@ -1,11 +1,7 @@
-- paths: src/components, src/utils
-  message: changes in **components** or **utils** folders have been made
-- paths: docs/
-  message: changes in **docs** folder have been made
-- paths: "**/*.js"
+- paths: "**/*.*"
   message: |
-    ### Please tick the following checkboxes:
+    Self-review checklist (mark all items after checking them):
 
-    - [ ] the code is tested
-    - [ ] files are compressed
-    - [ ] files contain no errors
+    - [ ] Don’t rush. Check all changes in PR again.
+    - [ ] Run `pnpm test`.
+    - [ ] No new errors and warning in the browser console.
