improve inputs handling

--- a/action.yml
+++ b/action.yml
@@ -7,10 +7,13 @@ branding:
 inputs:
   token:
     description: "token for github"
+    required: true
   datapath:
     description: "path to data yaml file"
+    required: true
   signature:
     description: a string that prepends to the message
+    default: "🗯️ [pull-request-auto-reviewer]:"
 runs:
   using: "node20"
   main: "dist/index.js"
