--- a/package.json
+++ b/package.json
@@ -1,12 +1,8 @@
 {
   "name": "gh-actions-test",
-  "version": "1.0.0",
+  "version": "1.0.7",
   "description": "",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
+  "author": "pshergie",
   "license": "ISC",
   "dependencies": {
     "@actions/core": "^1.10.1",
