--- a/docs/data.yml
+++ b/docs/data.yml
@@ -1,9 +1,11 @@
-- paths: "**/*.*"
-  message: |
-    Self-review checklist (mark all items after checking them):
+- prependMsg: "🗯️ [pull-request-auto-reviewer]:"
+- checks:
+    - paths: "**/*.*"
+      message: |
+        Self-review checklist (mark all items after checking them):
 
-    - [ ] Don’t rush. Check all changes in PR again.
-    - [ ] Run `pnpm test`.
-    - [ ] No new errors and warning in the browser console.
-- paths: src/utils, src/components
-  message: changes in **utils** and **components** require to follow project guildelines
+        - [ ] Don’t rush. Check all changes in PR again.
+        - [ ] Run `pnpm test`.
+        - [ ] No new errors and warning in the browser console.
+    - paths: src/utils, src/components
+      message: changes in **utils** and **components** require to follow project guildelines
