--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,8 @@ jobs:
   review:
     name: Post comment(s)
     runs-on: ubuntu-latest
+    permissions:
+      pull-requests: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -17,4 +19,3 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           datapath: docs/data.yml
-          signature: "🗯️ [pull-request-auto-reviewer]:"
