--- a/.github/workflows/upload-diff.yml
+++ b/.github/workflows/upload-diff.yml
@@ -16,7 +16,7 @@ jobs:
           fetch-depth: 0
 
       - name: Generate Diff
-        run: git diff --name-only > my_diff.txt
+        run: git diff ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }} --name-only > my_diff.txt
 
       - name: Print out diff
         shell: bash
