--- a/.github/workflows/upload-diff.yml
+++ b/.github/workflows/upload-diff.yml
@@ -27,5 +27,5 @@ jobs:
       - name: Upload Diff as Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: my_diff
+          name: my-diff
           path: my_diff.txt
