--- a/.github/workflows/auto-review-comment.yml
+++ b/.github/workflows/auto-review-comment.yml
@@ -21,6 +21,15 @@ jobs:
           repository: ${{ github.repository_owner }}/${{ github.event.repository.name }}
           run-id: ${{ github.event.workflow_run.id }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Download PR Comments Artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: pr-comments
+          repository: ${{ github.repository_owner }}/${{ github.event.repository.name }}
+          run-id: ${{ github.event.workflow_run.id }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Analyze changes
         uses: ./
         id: auto-review-action
