--- a/.github/workflows/upload-diff.yml
+++ b/.github/workflows/upload-diff.yml
@@ -32,12 +32,7 @@ jobs:
                           -H "X-GitHub-Api-Version: 2022-11-28" \
                           "https://api.github.com/repos/${{ github.repository }}/issues/$pr_number/comments")
 
-          echo "$comments" > all_comments.json
-
-      - name: Extract user and body from comments
-        id: extract-comments
-        run: |
-          jq -r '.[] | {user: .user.login, body: .body}' all_comments.json
+          echo "$comments" | jq '[.[] | {user: .user.login, body: .body}]' > pr_comments.json
 
       - name: Print out comments
         shell: bash
