--- a/.github/workflows/auto-review-comment.yml
+++ b/.github/workflows/auto-review-comment.yml
@@ -21,6 +21,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: my-diff
+          path: auto_review_artifacts/
           repository: ${{ github.repository_owner }}/${{ github.event.repository.name }}
           run-id: ${{ github.event.workflow_run.id }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
