--- a/.github/workflows/auto-review-comment.yml
+++ b/.github/workflows/auto-review-comment.yml
@@ -20,24 +20,8 @@ jobs:
       - name: Download Diff Artifact
         uses: actions/download-artifact@v4
         with:
-          name: my-diff
+          name: auto-review-artifacts
           path: auto_review_artifacts/
-          repository: ${{ github.repository_owner }}/${{ github.event.repository.name }}
-          run-id: ${{ github.event.workflow_run.id }}
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Download PR Comments Artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: pr-comments
-          repository: ${{ github.repository_owner }}/${{ github.event.repository.name }}
-          run-id: ${{ github.event.workflow_run.id }}
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Download PR Number Artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: pr-number
           repository: ${{ github.repository_owner }}/${{ github.event.repository.name }}
           run-id: ${{ github.event.workflow_run.id }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
