--- a/package.json
+++ b/package.json
@@ -9,5 +9,10 @@
     "@actions/github": "^6.0.0",
     "js-yaml": "^4.1.0",
     "minimatch": "^9.0.4"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.3.0",
+    "eslint": "^9.3.0",
+    "globals": "^15.3.0"
   }
 }
