--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "author": "pshergie",
   "license": "ISC",
+  "scripts": {
+    "compile": "ncc build src/index.js"
+  },
   "dependencies": {
     "@actions/core": "^1.10.1",
     "@actions/github": "^6.0.0",
